syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.overcode250204.common.grpc";
option java_outer_classname = "TestOrderServiceProto";

package test_order;



